--- a/ch1/hint/templates/hint/hint_code.html
+++ b/ch1/hint/templates/hint/hint_code.html
@@ -136,163 +136,163 @@
     };
 
     function check() {
-      if(hintCode.p.value == "DB38") {
+      if(hintCode.p.value == "DB38" || hintCode.p.value == "db38") {
         hintCode.p.value = "1";
         return true;
       }
-      else if(hintCode.p.value == "DA60") {
+      else if(hintCode.p.value == "DA60" || hintCode.p.value == "da60") {
         hintCode.p.value = "2";
         return true;
       }
-      else if(hintCode.p.value == "CA59") {
+      else if(hintCode.p.value == "CA59" || hintCode.p.value == "ca59") {
         hintCode.p.value = "3";
         return true;
       }
-      else if(hintCode.p.value == "BD67") {
+      else if(hintCode.p.value == "BD67" || hintCode.p.value == "bd67") {
         hintCode.p.value = "4";
         return true;
       }
-      else if(hintCode.p.value == "AC35") {
+      else if(hintCode.p.value == "AC35" || hintCode.p.value == "ac35") {
         hintCode.p.value = "5";
         return true;
       }
-      else if(hintCode.p.value == "BC71") {
+      else if(hintCode.p.value == "BC71" || hintCode.p.value == "bc71") {
         hintCode.p.value = "6";
         return true;
       }
-      else if(hintCode.p.value == "AD58") {
+      else if(hintCode.p.value == "AD58" || hintCode.p.value == "ad58") {
         hintCode.p.value = "7";
         return true;
       }
-      else if(hintCode.p.value == "CB88") {
+      else if(hintCode.p.value == "CB88" || hintCode.p.value == "ca88") {
         hintCode.p.value = "8";
         return true;
       }
-      else if(hintCode.p.value == "CD37") {
+      else if(hintCode.p.value == "CD37" || hintCode.p.value == "cd37") {
         hintCode.p.value = "9";
         return true;
       }
-      else if(hintCode.p.value == "CC38") {
+      else if(hintCode.p.value == "CC38" || hintCode.p.value == "cc38") {
         hintCode.p.value = "10";
         return true;
       }
-      else if(hintCode.p.value == "DC54") {
+      else if(hintCode.p.value == "DC54" || hintCode.p.value == "dc54") {
         hintCode.p.value = "11";
         return true;
       }
-      else if(hintCode.p.value == "DD88") {
+      else if(hintCode.p.value == "DD88" || hintCode.p.value == "dd88") {
         hintCode.p.value = "12";
         return true;
       }
-      else if(hintCode.p.value == "DB34") {
+      else if(hintCode.p.value == "DB34" || hintCode.p.value == "db34") {
         hintCode.p.value = "13";
         return true;
       }
-      else if(hintCode.p.value == "AB65") {
+      else if(hintCode.p.value == "AB65" || hintCode.p.value == "ab65") {
         hintCode.p.value = "14";
         return true;
       }
-      else if(hintCode.p.value == "CA29") {
+      else if(hintCode.p.value == "CA29" || hintCode.p.value == "ca29") {
         hintCode.p.value = "15";
         return true;
       }
-      else if(hintCode.p.value == "BC63") {
+      else if(hintCode.p.value == "BC63" || hintCode.p.value == "bc63") {
         hintCode.p.value = "16";
         return true;
       }
-      else if(hintCode.p.value == "AC25") {
+      else if(hintCode.p.value == "AC25" || hintCode.p.value == "ac25") {
         hintCode.p.value = "17";
         return true;
       }
-      else if(hintCode.p.value == "BC31") {
+      else if(hintCode.p.value == "BC31" || hintCode.p.value == "bc31") {
         hintCode.p.value = "18";
         return true;
       }
-      else if(hintCode.p.value == "AD98") {
+      else if(hintCode.p.value == "AD98" || hintCode.p.value == "ad98") {
         hintCode.p.value = "19";
         return true;
       }
-      else if(hintCode.p.value == "CB48") {
+      else if(hintCode.p.value == "CB48" || hintCode.p.value == "cb48") {
         hintCode.p.value = "20";
         return true;
       }
-      else if(hintCode.p.value == "CD27") {
+      else if(hintCode.p.value == "CD27" || hintCode.p.value == "cd27") {
         hintCode.p.value = "21";
         return true;
       }
-      else if(hintCode.p.value == "CC98") {
+      else if(hintCode.p.value == "CC98" || hintCode.p.value == "cc98") {
         hintCode.p.value = "22";
         return true;
       }
-      else if(hintCode.p.value == "DC14") {
+      else if(hintCode.p.value == "DC14" || hintCode.p.value == "dc14") {
         hintCode.p.value = "23";
         return true;
       }
-      else if(hintCode.p.value == "DD08") {
+      else if(hintCode.p.value == "DD08" || hintCode.p.value == "dd08") {
         hintCode.p.value = "24";
         return true;
       }
-      else if(hintCode.p.value == "BC51") {
+      else if(hintCode.p.value == "BC51" || hintCode.p.value == "bc51") {
         hintCode.p.value = "25";
         return true;
       }
-      else if(hintCode.p.value == "CD47") {
+      else if(hintCode.p.value == "CD47" || hintCode.p.value == "cd47") {
         hintCode.p.value = "26";
         return true;
       }
-      else if(hintCode.p.value == "CB02") {
+      else if(hintCode.p.value == "CB02" || hintCode.p.value == "cb02") {
         hintCode.p.value = "27";
         return true;
       }
-      else if(hintCode.p.value == "DC14") {
+      else if(hintCode.p.value == "DC14" || hintCode.p.value == "dc14") {
         hintCode.p.value = "28";
         return true;
       }
-      else if(hintCode.p.value == "CC58") {
+      else if(hintCode.p.value == "CC58" || hintCode.p.value == "cc58") {
         hintCode.p.value = "29";
         return true;
       }
-      else if(hintCode.p.value == "DD48") {
+      else if(hintCode.p.value == "DD48" || hintCode.p.value == "dd48") {
         hintCode.p.value = "30";
         return true;
       }
-      else if(hintCode.p.value == "BC77") {
+      else if(hintCode.p.value == "BC77" || hintCode.p.value == "bc77") {
         hintCode.p.value = "31";
         return true;
       }
-      else if(hintCode.p.value == "CD44") {
+      else if(hintCode.p.value == "CD44" || hintCode.p.value == "cd44") {
         hintCode.p.value = "32";
         return true;
       }
-      else if(hintCode.p.value == "DC55") {
+      else if(hintCode.p.value == "DC55" || hintCode.p.value == "dc55") {
         hintCode.p.value = "33";
         return true;
       }
-      else if(hintCode.p.value == "DD90") {
+      else if(hintCode.p.value == "DD90" || hintCode.p.value == "dd90") {
         hintCode.p.value = "34";
         return true;
       }
-      else if(hintCode.p.value == "BC53") {
+      else if(hintCode.p.value == "BC53" || hintCode.p.value == "bc53") {
         hintCode.p.value = "35";
         return true;
       }
-      else if(hintCode.p.value == "CD93") {
+      else if(hintCode.p.value == "CD93" || hintCode.p.value == "cd93") {
         hintCode.p.value = "36";
         return true;
       }
-      else if(hintCode.p.value == "CB21") {
+      else if(hintCode.p.value == "CB21" || hintCode.p.value == "cb21") {
         hintCode.p.value = "37";
         return true;
       }
-      else if(hintCode.p.value == "DC22") {
+      else if(hintCode.p.value == "DC22" || hintCode.p.value == "dc22") {
         hintCode.p.value = "38";
         return true;
       }
-      else if(hintCode.p.value == "CC11") {
+      else if(hintCode.p.value == "CC11" || hintCode.p.value == "cc11") {
         hintCode.p.value = "39";
         return true;
       }
-      else if(hintCode.p.value == "DD65") {
+      else if(hintCode.p.value == "DD65" || hintCode.p.value == "dd65") {
         hintCode.p.value = "40";
         return true;
       }
